<resources>
    <string name="app_name">BwfSurveyBeta</string>
    <string name="button_add">Add data</string>
    <string name="button_clear">Clear data</string>
    <string name="button_query">Query data</string>
    <string name="authentication">Authentication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="newuser">New User?</string>
    <string name="signup">Sign Up</string>
    <string name="username">username</string>
    <string name="Username">Name</string>
    <string name="confirm_signup">Confirm SignUp</string>
    <string name="confirmation_code">confirmation code</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="continueAs">continue as</string>
    <string name="authenticated">Authenticate</string>
    <string name="collectData">collect data</string>
    <string name="viewCollectedData">view data</string>
    <string name="initialSurvey">Initial Household Survey</string>
    <string name="waterSurvey">Household Water Test-SWE</string>
    <string name="healthCheck">Health Check Survey</string>
    <string name="followUpSurvey">6 &amp; 12 month follow-up Household Survey</string>
    <string name="Surname">Surname</string>
    <string name="firstname">first name</string>
    <string name="saveData">save data</string>
    <string name="action_settings">setting</string>
    <string name="waterSurveyComm">Community Water Test</string>
    <string name="SWEMonthlySummary">Monthly SWE/Vol Activity summary</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmationDesc">We sent a security code to your email, Please enter it here.</string>
    <string name="signOut">Sign Out</string>
    <string name="household_water_test_volunteers">Household Water Test-Volunteers</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="resetPassword">Reset password</string>
    <string name="textResetPasswordDesc">Please enter your email address you signed up with</string>
    <string name="emailAddress">Email Address</string>
    <string name="send_password_reset_code">reset password</string>
    <string name="confirm_password_reset">confirm password reset</string>
    <string name="resetPasswordConfirmation">Password Reset Confirmation</string>
    <string name="textResetPasswordConfirmationDesc">Please enter a new password and the password reset code sent to your email</string>
    <string name="newpassword">new password</string>
    <string name="resetPasswordConfirmationCode">verification code just sent to your email</string>
</resources>