<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textResetPasswordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resetPasswordConfirmation"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/textResetPasswordConfirmationDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textResetPasswordConfirmationDesc"
        android:textSize="10sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp" />

        <ImageView
            android:id="@+id/show_pass_btn_reset_dialog"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:alpha=".5"
            android:padding="5dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_show_password" />
    </RelativeLayout>

    <EditText
        android:id="@+id/resetPasswordConfirmationCode"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/resetPasswordConfirmationCode" />

</LinearLayout>